# awful-engine

./: .gitignore  CMakeLists.txt  README.md  awful  awful_wide  make.sh  sh3d
assets/: plane.stl  plane_binary.stl
dev/: cube.fbx
docs/: dev.md
include/: Display.h  Global.h  Sprite.h  System.h  Vector.h  cubedemo.h  demo1.h  velocitydemo.h
include/awful/: Awful.h  Display.h  Global.h  Input.h  Loaders.h  Matrix.h  Mesh.h  Rasterization.h  Rasterizer.h  Renderer.h  Sprite.h  System.h  Types.h  Vector.h  cgm.h
src/: assets.h  cubedemo.h  depthRendering.h  loadOBJ.h  main.c  meshes.h  polygons.h  vecdemo.h  velocitydemo.c  velocitydemo.h
src/awful/linux/: Display.c  Input.c
src/awful/macos/: Display.c  Input.c
src/awful/universal/: Display.c  Matrix.c  Mesh.c  ObjLoader.c  Rasterization.c  Rasterizer.c  Renderer.c  System.c  Vector2.c  Vector3.c  cgm.c
src/linux/: Display.c
src/macos/: Display.c  Input.c
src/sh3d/: main.c  viewer.h
src/testbed/: cubedemo.h  demo1.h  depthRendering.h  loadOBJ.h  main.c  meshes.h  polygons.h  testbed.h  velocitydemo.h
src/universal/: System.c
